test/fail/io/write_to_read_file.lly
#[
IOError: File not open for writing.
Traceback:
    from [C]: in file::write
    from write_to_read_file.lly:8: in __main__
]#

stdin.write("123")
